--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="about.html">About Me</a>
             <a href="project.htmls">Projects</a>
             <a href="portfolio.html" class="active">Portfolio</a> <!-- Marking Portfolio as active -->
-            <a href="#">Contact</a>
+              <a href="contact.html" class="active">contact</a> 
         </nav>
     </header>
     
@@ -26,9 +26,6 @@
             <h3>Cybersecurity Student / Programmer</h3>
             <p>Hello! I’m Aldo Mata, a Cybersecurity undergraduate at New Mexico State University with a strong passion for programming and secure computing. I have a deep interest in exploring areas of cybersecurity like penetration testing, network security, and encryption. My goal is to develop innovative solutions that address real-world security challenges.</p>
             <div class="btn-box">
-                <a href="#" class="btn">Hire Me</a>
-                <a href="#" class="btn">Let's Talk</a>
-            </div>
         </div>
         <div class="home-sci">
             <a href="https://www.linkedin.com/in/aldo-mata-95a07a308/" target="_blank"><i class='bx bxl-linkedin'></i></a>
