--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <a href="index.html" class="active">Home</a>
             <a href="about.html">About Me</a>
-            <a href="project.htmls">Projects</a>
+            <a href="project.html">Projects</a>
             <a href="portfolio.html" class="active">Portfolio</a> <!-- Marking Portfolio as active -->
               <a href="contact.html" class="active">contact</a> 
         </nav>
