--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header class="header">
         <a href="portofolio website.html" class="logo">Aldo Mata</a>
         <nav class="navbar">
-            <a href="portofolio website.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html" class="active">About Me</a>
             <a href="project.html">Projects</a>
             <a href="portfolio.html" class="active">Portfolio</a> <!-- Marking Portfolio as active -->
