--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <a href="#" class="logo">Aldo Mata</a>
         <nav>
             <ul class="navbar">
-                <li><a href="portofolio website.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
