--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <a href="#" class="logo">Aldo Mata</a>
         <nav>
             <ul class="navbar">
-                <li><a href="portofolio website.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="project.html">Projects</a></li> <!-- Wrapped in li -->
                 <li><a href="portfolio.html" class="active">Portfolio</a></li>
