--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
     <header class="header">
         <a href="portofolio website.html" class="logo">Aldo Mata</a>
         <nav class="navbar">
-            <a href="portofolio website.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
             <a href="project.html" class="active">Projects</a>
             <a href="portfolio.html" class="active">Portfolio</a> <!-- Marking Portfolio as active -->
